--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
 	{% include meta.html %}
-
+    {% include analytics.html %}
+    
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -29,7 +30,7 @@
           <nav>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/projects">Projects</a>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/blog">Blog</a>
           </nav>
         </header>
       </div>
@@ -46,7 +47,6 @@
         </footer>
       </div>
     </div>
-
-    {% include analytics.html %}
+    
   </body>
 </html>
