--- a/_includes/button.html
+++ b/_includes/button.html
@@ -1,2 +1,5 @@
+<!-- Deprecated
 {% if button.html.about %}<button name="button" onclick="/about/{{ button.html.about }}">About Me</button>{% endif %}
-{% if button.html.projects %}<button name="button" onclick="/projects/{{ button.html.projects }}">View Projects</button>{% endif %}
+{% if button.html.projects %}<button name="button" onclick="/projects/{{ button.html.projects }}">View Projects</button>{% endif %} -->
+
+<button type="button" class="btn btn-{{include.button_class}} active">{{include.button_name}}</button>
