--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,10 @@
 ---
 layout: default
+published: true
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
+  <h3>{{ page.title }}</h3>
 
   <div class="entry">
     {{ content }}
