--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,8 @@
             <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/projects">Projects</a>
+            <a href="{{ site.baseurl }}/examples">Examples</a>
+            <a href="{{ site.baseurl }}/projects">Contact</a>
           </nav>
         </header>
       </div>
