--- a/style.scss
+++ b/style.scss
@@ -285,7 +285,7 @@ footer {
 
 button {
   font-color: $white;
-  background-color: $lightBlue;
+  background-color: $blue;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
