--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/projects">Projects</a>
             <a href="{{ site.baseurl }}/examples">Examples</a>
-            <a href="{{ site.baseurl }}/projects">Contact</a>
+            <a href="{{ site.baseurl }}/contact">Contact</a>
           </nav>
         </header>
       </div>
