--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,11 @@
 ---
 layout: default
+published: true
 ---
 
 <article class="page">
 
-  <h1>{{ page.title }}</h1>
+  {% include meta.html %}
 
   <div class="entry">
     {{ content }}
