--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,8 +5,10 @@ published: true
 
 <article class="page">
 
-  {% include meta.html %}
+  <!-- <h1>{{ page.title }}</h1> -->
 
+  {% include meta.html %}
+  
   <div class="entry">
     {{ content }}
   </div>
